--- a/index.html
+++ b/index.html
@@ -10,32 +10,86 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="estilos/style.css">
     <title>Formulario</title>
 </head>
 
 <body>
-    <h1 class="ejemplo-formulario">Ejemplo formulario</h1>
+    <header class="header">
+        <h1 class="ejemplo-formulario">Ejemplo formulario</h1>
+        <button class="switch" id="switch">
+            <span><img src="img/sol.svg" alt="sol"></span>
+            <span><img src="img/luna.svg" alt="luna"></span>
+        </button>
+    </header>
     <div class="formulario">
         <form action="">
-            <label for="#nombre1">Primer nombre.</label><span class="asterisco-obligatorio">*</span>
-            <input class="input-box" type="text" id="nombre1" name="nombre1" style="border: none; outline: none"
-                placeholder="Juan..." tabindex="1" required>
-            <label for="#nombre2">Segundo nombre.</label>
-            <input class="input-box" type="text" id="nombre2" name="nombre2" style="border: none; outline: none"
-                placeholder="Pepito..." tabindex="2">
-            <label for="#apellido1">Primer apellido.</label><span class="asterisco-obligatorio">*</span>
-            <input class="input-box" type="text" name="apellido1" id="apellido1" style="border: none; outline: none"
-                placeholder="Perez..." tabindex="3" required>
-            <label for="#apellido2">Segundo apellido.</label>
-            <input class="input-box" type="text" name="apellido2" id="apellido2" style="border: none; outline: none"
-                placeholder="Moyano..." tabindex="4">
-            <label for="#edad">Edad</label><span class="asterisco-obligatorio">*</span>
-            <input class="input-box" type="number" id="edad" name="edad-usu" style="border: none; outline: none;"
-                placeholder="18..." tabindex="5" required>
-            <label for="#date">Fecha de nacimiento.</label><span class="asterisco-obligatorio">*</span>
-            <input type="date" name="fecha-nacimiento" id="date" style="outline: none;" tabindex="6" required> 
-        </form> 
+            <!--Areas de login-->
+            <!--Esta area es usada comunmente para los login o formularios de ingreso de datos
+            ya que solicita cierta informacion para registrar o ingresar.-->
+            <div class="mb-3">
+                <label for="exampleInputEmail1" class="form-label">Username <span class="asterisco">*</span></label>
+                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
+                    placeholder="AkilesCastro56..." required>
+            </div>
+            <div class="mb-3">
+                <label for="exampleInputPassword1" class="form-label">Password <span class="asterisco">*</span></label>
+                <input type="password" class="form-control" id="exampleInputPassword1" placeholder="********">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-label">Email <span class="asterisco">*</span></label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com"
+                    placeholder="pepito@ejemplo.gmail.com">
+            </div>
+            <div class="mb-3">
+                <!--Text area-->
+                <!--Esta area es comunmente usada para guardar informacion a la ora del registro o en diferentes ocasiones
+                gran ejemplo, en GuitHub se utiliza para guardar una breve descripcion del repositorio o proyecto-->
+                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                    placeholder="lorem impus..."></textarea>
+            </div>
+            <!--Area del select-->
+            <!--Esta area es comunmente usada para desplegar menús de datos, simplifica la necesidad de usar chekbox o radio
+                buttons-->
+            <select class="form-select" aria-label="Default select example">
+                <option selected>Open this select menu</option>
+                <option value="1">One</option>
+                <option value="2">Two</option>
+                <option value="3">Three</option>
+            </select>
+            <!--Area de Checkbox-->
+            <!--Las checkbox son elementos de un formulario que se usan para seleccionar yna o varias opciones al tiempo-->
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Checkbox 1
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                <label class="form-check-label" for="flexCheckChecked">
+                    Checkbox 2
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                    Checkbox 3
+                </label>
+            </div>
+            <div class="form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckChecked" checked>
+                <label class="form-check-label" for="flexCheckChecked">
+                    Checkbox 4
+                </label>
+            </div>
+            <!--Boton submit-->
+            <!-- Este boton es esencial en un formulario, ya que es quien envía la informacion recolectada a la BD -->
+            <button type="submit" class="btn btn-primary" onclick="click();">Submit</button>
+        </form>
     </div>
 </body>
+<script src="js/darkmode.js"></script>
 
 </html>
